OSX Retina: Movieclip Editor - Font extremely small #38944

Closed
opened 2014-03-04 09:52:50 +01:00 by Sebastian Röthlisberger · 10 comments

System Information
osx

Blender Version
Broken: 1ae3108
Worked: (optional)

Short description of error
The Text/Font on top left is very very small.

BUG_CLipText.png

Exact steps for others to reproduce the error
On Mac wit Retina Display:
Add Clip to Movieclip Editor
Add min. 8 Tracks
Hit Solve Camera Motion
See text top left

**System Information** osx **Blender Version** Broken: 1ae3108 Worked: (optional) **Short description of error** The Text/Font on top left is very very small. ![BUG_CLipText.png](https://archive.blender.org/developer/F79881/BUG_CLipText.png) **Exact steps for others to reproduce the error** On Mac wit Retina Display: Add Clip to Movieclip Editor Add min. 8 Tracks Hit Solve Camera Motion See text top left

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger
Brecht Van Lommel was assigned by Sergey Sharybin 2014-03-04 09:58:37 +01:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, my guess is that calls to BLF_size from clip_draw.c needs to multiply 11.0f by U.pixelsize. Do you mind testing this and see if it works on retina?

@brecht, my guess is that calls to BLF_size from clip_draw.c needs to multiply 11.0f by U.pixelsize. Do you mind testing this and see if it works on retina?

This issue was referenced by blender/blender-addons-contrib@58bd0e53f1

This issue was referenced by blender/blender-addons-contrib@58bd0e53f1172b21f674736276e9c22b0d63f3e6

This issue was referenced by 58bd0e53f1

This issue was referenced by 58bd0e53f1172b21f674736276e9c22b0d63f3e6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 58bd0e53f1.

Closed by commit 58bd0e53f1.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I confirmed that the fix works fine on a Retina Display, fixed. :) Thanks Sergey.

I confirmed that the fix works fine on a Retina Display, fixed. :) Thanks Sergey.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38944
No description provided.