Fix T38944, Fonts too small in Movie Clip Editor on Retina display.

Thanks to Sergey for suggesting this fix.